Hide filters by CSS instead of doing it via JS to avoid flickering filters.

--- a/l10n_community/editor.css
+++ b/l10n_community/editor.css
@@ -306,3 +306,7 @@ border-color:rgba(0,0,0,0.2);
   clear: both;
   visibility: hidden;
   }
+  
+html.js .js-hide {
+  display: none;
+}
